--- a/index.html
+++ b/index.html
@@ -55,23 +55,17 @@ Second Heading Text
 http://www.example.com || Another Title
 -->
 
-Title 1
-http://google.com || Google yeah || g || images/icon.png
-http://deviantart.com || dA || da
+Personal
+http://gmail.com || Google mail || gm || images/icon.png
+http://twitter.com || Twitter || tw || images/icon.png
 
-Title 2
+11 Paths
+https://projects.11paths.local/gerrit/#/ || Gerrit
 http://pixelfuckers.org || PF
 chrome://bookmarks/ || Chrome bookmarks
 
-Coconut
+Others
 http://newgrounds.com || NG
-
-New Block
-http://lolwut.com || Lol, Wut?
-
-Bananas
-http://crshd.cc || crshd.cc
-http://rahforum.biz || rahforum.biz
 
 </body>
 </html>
