--- a/index.html
+++ b/index.html
@@ -58,14 +58,19 @@ http://www.example.com || Another Title
 Personal
 http://gmail.com || Google mail || gm || images/icon.png
 http://twitter.com || Twitter || tw || images/icon.png
+http://web.whatsapp.com || WhatsApp || wa || images/icon.png
+https://www.rememberthemilk.com/ || Remember the milk || rt || images/icon.png
 
 11 Paths
 https://projects.11paths.local/gerrit/#/ || Gerrit
-http://pixelfuckers.org || PF
-chrome://bookmarks/ || Chrome bookmarks
+http://projects.11paths.local/redmine/login?back_url=http%3A%2F%2Fprojects.11paths.local%2Fredmine%2F || RedMine
+http://jenkins.11paths.local:8080/login?from=%2F || Jenkins
+https://elevenpaths.zendesk.com || ZenDesk
+https://elevenpaths.sharepoint.com/Documentos%20de%20inters/Forms/AllItems.aspx?RootFolder=%2FDocumentos%20de%20inters%2FHuman%20Resources || intranet
+https://ciberinteligencia-telefonica.e-paths.com/ || Portal Cyber Seguridad
 
 Others
-http://newgrounds.com || NG
+http://www.meneame.net || Meneame
 
 </body>
 </html>
