Added Ascens VPN link

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ http://jenkins.11paths.local:8080/login?from=%2F || Jenkins
 https://elevenpaths.zendesk.com || ZenDesk
 https://elevenpaths.sharepoint.com/Documentos%20de%20inters/Forms/AllItems.aspx?RootFolder=%2FDocumentos%20de%20inters%2FHuman%20Resources || intranet
 https://ciberinteligencia-telefonica.e-paths.com/ || Portal Cyber Seguridad
+https://vpn.cloudseguro.es/1906635 || Ascens VPN
 
 Others
 http://www.meneame.net || Meneame
